--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,15 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+#gradio
+.gradio/*
+
+#vscode
+.vscode/*
+
+#checkpoints
+checkpoints/*
+
+#offload
+offload/*
